[package]
name = "aspen"
version = "0.3.1"
authors = ["Nathan Kent <nate@nkent.net>"]
license = "MIT"

description = "A behavior tree implementation in Rust"
keywords = ["behavior", "tree", "fsm", "state", "ai"]

documentation = "https://docs.rs/aspen"
repository = "https://gitlab.com/neachdainn/aspen.git"

readme = "README.adoc"

[dependencies]
log = "0.3.8"
